  	  logging level
	- restore support for preserving original attribute order (except
	  for JSON object flavoured export)
	- add hxl.Column.get_display_tag method with optional attribute
	  sorting
	- add support for lat/lon normalisation to clean-data filter
	- add purge option to clean_data to allow removing numbers, dates,
	  or lat/lon that can't be parsed during data cleaning

2018-02-05 Release 4.5.1
	- bug-fix release: do not let a misspelled date cause a fatal
	  exception

2018-01-31 Release 4.5
	- the merge-data filter now looks for keys in *all* candidate
	  columns (not just the first-matching ones)
	- add skip_untagged parameter to without_columns and ColumnFilter,
	  for removing columns without HXL hashtags
	- hxl.model.Row.get_all can take a default value
	- the clean-data filter has a number_format option (e.g. "0.2f")
	- the hxlclean command-line script has a --number-format option
	- hxl.model.Column.display_tag always shows attributes sorted, per HXL
	  1.1 beta
	- added hxl.model.Row.dictionary property to return row as a
	  Python dict
	- hxl.model.Source.gen_json() has a new use_objects option to use
	  the JSON list-of-objects format from HXL 1.1 beta as output
	- hxl.io.write_json() has the use_objects option to pass on to
	  hxl.model.Source.gen_json()
	- try to recognise JSON data even if it doesn't have a JSON MIME
	  type or file extension

2017-11-22 Release 4.4
	- throw proper exception for failed HTTP request from requests library
	- support JSON arrays of objects as well as arrays of arrays
	- recursively search for HXL data inside a JSON dataset

2017-06-13 Release 4.3
	- fixed bug with disabling SSL checks via requests library
	- improved Excel data handling — use integers instead of floats
	  when possible, and fix bug when trying to parse numbers as dates

2017-06-05 Release 4.1
	- support JSON input (list of rows)
	- add fill_data filter to fill empty cells from previous rows