@@ -25,7 +25,7 @@ FUZZY_HASHTAG_PERCENTAGE = 0.5
 # Patterns for URL munging
 GOOGLE_SHEETS_URL = r'^https?://docs.google.com/.*spreadsheets.*([0-9A-Za-z_-]{44})(?:.*gid=([0-9]+))?.*$'
 DROPBOX_URL = r'^https://www.dropbox.com/s/([0-9a-z]{15})/([^?]+)\?dl=[01]$'
-CKAN_URL = r'^(https?://[^/]+)/dataset/([^/]+)/resource/([a-z0-9-]{36})$'
+CKAN_URL = r'^(https?://[^/]+)/dataset/([^/]+)(?:/resource/([a-z0-9-]{36}))?$'
 
 # opening signatures for well-known file types
 
@@ -126,25 +126,25 @@ def write_json(output, source, show_headers=True, show_tags=True, use_objects=Fa
 def munge_url(url, verify_ssl=True):
     """Munge a URL to get at underlying data for well-known types."""
 
-    # Is it a Google URL?
-    result = re.match(GOOGLE_SHEETS_URL, url)
-    if result and not re.search(r'/pub', url):
-        if result.group(2):
-            return 'https://docs.google.com/spreadsheets/d/{0}/export?format=csv&gid={1}'.format(result.group(1), result.group(2))
-        else:
-            return 'https://docs.google.com/spreadsheets/d/{0}/export?format=csv'.format(result.group(1))
-
-    # Is it a Dropbox URL?
-    result = re.match(DROPBOX_URL, url)
-    if result:
-        return 'https://www.dropbox.com/s/{0}/{1}?dl=1'.format(result.group(1), result.group(2))
-
     # Is it a CKAN resource? (Assumes the v.3 API for now)
     result = re.match(CKAN_URL, url)
     if result:
         ckan_api_query = '{}/api/3/action/resource_show?id={}'.format(result.group(1), result.group(3))
         ckan_api_result = requests.get(ckan_api_query, verify=verify_ssl).json()
-        return ckan_api_result['result']['url']
+        url = ckan_api_result['result']['url']
+
+    # Is it a Google URL?
+    result = re.match(GOOGLE_SHEETS_URL, url)
+    if result and not re.search(r'/pub', url):
+        if result.group(2):
+            url = 'https://docs.google.com/spreadsheets/d/{0}/export?format=csv&gid={1}'.format(result.group(1), result.group(2))
+        else:
+            url = 'https://docs.google.com/spreadsheets/d/{0}/export?format=csv'.format(result.group(1))
+
+    # Is it a Dropbox URL?
+    result = re.match(DROPBOX_URL, url)
+    if result:
+        url = 'https://www.dropbox.com/s/{0}/{1}?dl=1'.format(result.group(1), result.group(2))
 
     # No changes
     return url
